--- a/style.css
+++ b/style.css
@@ -42,3 +42,11 @@ button:hover {
     color: #fff;
     border: #fff solid 1px;
 }
+
+@media only screen and (max-width: 1024px) {
+    #conter{
+        left: 40%;
+        position: relative;
+        width: 20%;
+    }
+  }
