--- a/style.css
+++ b/style.css
@@ -47,6 +47,20 @@ button:hover {
     #conter{
         left: 40%;
         position: relative;
-        width: 20%;
+        width: 20%;  
+    }
+  }
+@media only screen and (max-width: 425px) {
+    #conter{
+        left: 30%;
+        position: relative;
+        width: 40%;  
+    }
+  }
+@media only screen and (max-width: 320px) {
+    #conter{
+        left: 20%;
+        position: relative;
+        width: 60%;  
     }
   }
